--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -13,7 +13,7 @@ body>header>a>img, body>header a {
 
 body>header a {
     text-decoration: none;
-    color:darkorange;
+    color:white;
 }
 
 body>header a.menu:hover {
@@ -28,7 +28,7 @@ body>header>a>img {
 body>footer {
     background: #0047b3;
     /*background: #eee;*/
-    color:darkorange;
+    color:white;
     padding: 5px;
     margin: 10px 0;
     text-align: center;
