--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,17 @@
 
     </header>
 
-    <h1>Welcome</h1>
+    <main>
+        <article th:each="bet : ${latest3Bets}">
+            <p th:utext="${bet.description}">Bet Description</p>
+            <h2 th:text="${bet.type}">Bet Type</h2>
+
+
+
+            <p th:utext="${bet.outcomeA}">outcomeA</p>
+            <p th:utext="${bet.outcomeB}">outcomeB</p>
+        </article>
+    </main>
 
     <footer th:replace="default_layout :: footer-template">
 
