--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 
     </header>
 
-    <section>
+    <section id="latestBets">
         <h2>Latest Bets</h2>
-        <article th:each="userBet : ${latest3BetsByUser}">
+        <article class="bet-info" th:each="userBet : ${latest3BetsByUser}">
             <h3 class="title" th:text="${userBet.getBet().getDescription()}">Bet Description</h3>
             <i>Prediction:</i>
                 <span th:text="${userBet.getOutcome() == T(com.teamproject.bet4life.models.UserBetPrediction).A ?
