Add Prediction class implementation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,23 +9,26 @@
 
     </header>
 
-    <section id="latestBets">
-        <h2>Latest Bets</h2>
-        <article class="bet-info" th:each="userBet : ${latest3BetsByUser}">
-            <h3 class="title" th:text="${userBet.getBet().getDescription()}">Bet Description</h3>
-            <i>Prediction:</i>
+    <main>
+        <section id="latestBets">
+            <h2>Latest Bets</h2>
+            <article class="bet-info" th:each="userBet : ${latest3BetsByUser}">
+                <h3 class="title" th:text="${userBet.getBet().getDescription()}">Bet Description</h3>
+                <i>Prediction:</i>
                 <span th:text="${userBet.getOutcome() == T(com.teamproject.bet4life.models.UserBetPrediction).A ?
                         userBet.getBet().getOutcomeA() : userBet.getBet().getOutcomeB()}">Someone to win</span>
-            <div class="date">
-                <i>by:</i>
-                <span class="content" th:utext="${userBet.getUser().getUsername()}">User Name</span>
-            </div>
-            <div>
-                <i>On:</i>
-                <span th:text="${#dates.format(userBet.getDate(), 'dd-MMM-yyyy')}">22-May-2016</span>
-            </div>
-        </article>
-    </section>
+                <div class="date">
+                    <i>by:</i>
+                    <span class="content" th:utext="${userBet.getUser().getUsername()}">User Name</span>
+                </div>
+                <div>
+                    <i>On:</i>
+                    <span th:text="${#dates.format(userBet.getDate(), 'dd-MMM-yyyy')}">22-May-2016</span>
+                </div>
+            </article>
+        </section>
+    </main>
+
 
     <footer th:replace="default_layout :: footer-template">
 
