--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 body>header {
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.7);
     /*background: #eee;*/
     padding: 5px;
 }
@@ -39,18 +39,20 @@ body>header>a>img {
 }
 
 body>footer {
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.7);
     /*background: #eee;*/
     padding: 5px;
     margin: 10px 0;
     text-align: center;
+    clear: both;
 }
 
 #latestBets {
     margin:5px;
     padding:10px;
     background-color:rgba(0, 0, 0, 0.3);
-
+    width: 50%;
+    float: left;
 }
 
 .bet-info {
