--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,14 +10,20 @@
     <h1>Register</h1>
 
     <div class="form-group has-danger">
-        <label class="form-control-label" for="inputDanger1">Username</label>
-        <input type="text" class="form-control form-control-danger" id="inputDanger1">
+        <label class="form-control-label" for="inputUsername">Username</label>
+        <input type="text" class="form-control form-control-danger" id="inputUsername">
         <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
     </div>
 
     <div class="form-group has-danger">
-        <label class="form-control-label" for="inputDanger1">Password</label>
-        <input type="password" class="form-control form-control-danger" id="inputDanger1">
+        <label class="form-control-label" for="inputPassword">Password</label>
+        <input type="password" class="form-control form-control-danger" id="inputPassword">
+        <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
+    </div>
+
+    <div class="form-group has-danger">
+        <label class="form-control-label" for="inputConfirmPassword">Confirm Password</label>
+        <input type="password" class="form-control form-control-danger" id="inputConfirmPassword">
         <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
     </div>
 </div>
