Add post method to UserController

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -32,6 +32,8 @@
             <input type="password" class="form-control form-control-danger" id="inputConfirmPassword">
             <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
         </div>
+
+        <input type="submit" class="btn btn-primary"/>
     </form>
 </div>
     <script th:href="@{/jquery/jquery.min.js}"></script>
