--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.thymeleaf.org" xmlns:th="http://www.springframework.org/schema/mvc">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Register</title>
+    <meta charset="UTF-8"/>
+    <title>Viruses</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
-          th:href="@{/bootstrap/css/bootstrap.min.css}">
+          th:href="@{bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
+
+
 <div class="container">
-    <h1>Register</h1>
-
-    <form method="post">
-        <div class="form-group has-danger">
+    <h1>Register Page</h1>
+    <form method="post" th:object="${registrationModel}">
+        <div class="form-group" th:classappend="${#fields.hasErrors('username')} ? 'has-danger'">
             <label class="form-control-label" for="inputUsername">Username</label>
-            <input type="text" class="form-control form-control-danger" id="inputUsername">
-            <div class="form-control-feedback">Sorry,
+            <input type="text" class="form-control form-control-danger" id="inputUsername" th:field="*{username}"/>
+            <div class="form-control-feedback" th:each="error : ${#fields.errors('username')}" th:text="${error}">Sorry,
                 that username's taken. Try another?
             </div>
         </div>
-
-        <div class="form-group has-danger">
+        <div class="form-group" th:classappend="${#fields.hasErrors('password')}? 'has-danger'">
             <label class="form-control-label" for="inputPassword">Password</label>
-            <input type="password" class="form-control form-control-danger" id="inputPassword">
-            <div class="form-control-feedback">Sorry,
-                that username's taken. Try another?
+            <input type="password" class="form-control form-control-danger" id="inputPassword" th:field="*{password}"/>
+            <div class="form-control-feedback" th:each="error : ${#fields.errors('password')}" th:text="${error}">Sorry,
+                that password is incorrect?
             </div>
         </div>
-
-        <div class="form-group has-danger">
+        <div class="form-group" th:classappend="${#fields.hasErrors('global')} ? 'has-danger'">
             <label class="form-control-label" for="inputConfirmPassword">Confirm Password</label>
-            <input type="password" class="form-control form-control-danger" id="inputConfirmPassword">
-            <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
+            <input type="password" class="form-control form-control-danger" id="inputConfirmPassword"
+                   th:field="*{confirmPassword}"/>
+            <div class="form-control-feedback" th:each="error : ${#fields.errors('global')}" th:text="${error}">Sorry,
+                passwords are not matching?
+            </div>
         </div>
-
-        <input type="submit" class="btn btn-primary"/>
+        <input type="submit" class="btn btn-success" value="Register"/>
     </form>
 </div>
-    <script th:href="@{/jquery/jquery.min.js}"></script>
-    <script th:href="@{/bootstrap/js/bootstrap.min.js}"></script>
-
+<script th:src="@{jquery/jquery.min.js}"></script>
+<script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
 </body>
-</html>
