Working version before checking out register branch

--- a/src/main/resources/templates/default_layout.html
+++ b/src/main/resources/templates/default_layout.html
@@ -13,7 +13,7 @@
             <a class="menu" href="users/login.html" th:href="@{/users/login}">Login</a>
             <a class="menu" href="users/register.html" th:href="@{/users/register}">Register</a>
             <a class="menu" href="posts/index.html" th:href="@{/posts}">Predictions</a>
-            <a class="menu" href="posts/create.html" th:href="@{/posts/create}">Create Prediction</a>
+            <a class="menu" href="createPrediction.html" th:href="@{/createPrediction}">Create Prediction</a>
             <a class="menu" href="bets/index.html" th:href="@{/posts}">Bets</a>
             <a class="menu" href="bets/create.html" th:href="@{/posts/create}">Create Bet</a>
             <a class="menu" href="users/index.html" th:href="@{/users}">Users</a>
