--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div>
                     <i>On:</i>
-                    <span th:text="${#dates.format(prediction.getDatePublished(), 'yyyy-MMM-dd HH:MM:SS')}">22-May-2016 15:40:32</span>
+                    <span th:text="${#dates.format(prediction.getDatePublished(), 'dd-MMM-yyyy HH:MM:SS')}">22-May-2016 15:40:32</span>
                 </div>
             </article>
         </section>
