User class refactored, add bootstrap cdn

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,11 @@
+body {
+    background-image: url('http://www.atlanticmedia.co/pages/backgrounds/background_home.jpg');
+}
+
+.navbar-inverse {
+    background-color:rgba(0, 0, 0, 0.7);
+}
+
 h1 {
     color: #78ab46;
 }
