Add html fragments and base layout

--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -10,7 +10,9 @@
 
 <header th:include="fragments/header"></header>
 
-<span th:include="fragments/scripts_bundle"></span>
+<main th:include="${view}"></main>
+
+<footer th:include="fragments/footer"></footer>
 
 </body>
 </html>
