--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer th:fragment="footer">
+    <div class="container modal-footer">
+        <p>&copy; Team Venom, Telerik Academy Alpha, 2018</p>
+    </div>
+</footer>
