Add /register routing and register form

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Register</title>
-    <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css"
-          th:href="@{bootstrap/css/bootstrap.min.css}"/>
-</head>
-<body>
 <main>
     <div class="container body-content span=8 offset=2">
         <div class="well">
@@ -15,12 +5,17 @@
                 <fieldset>
                     <legend>Register</legend>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="username">username</label>
+                        <label class="col-sm-4 control-label" for="user_username">Username</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" type="text" id="username" placeholder="Username" name="username" required="required"/>
+                            <input class="form-control" type="text" id="user_username" placeholder="username" name="username" required="required"/>
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="user_fullname">Full Name</label>
+                        <div class="col-sm-4 ">
+                            <input class="form-control" type="text" id="user_fullname" placeholder="Full Name" name="fullName"/>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_password_first">Password</label>
                         <div class="col-sm-4">
@@ -45,39 +40,3 @@
         </div>
     </div>
 </main>
-
-<!--
-
-<div class="container">
-    <h1>Register Page</h1>
-    <form method="post" th:object="${registrationModel}">
-        <div class="form-group" th:classappend="${#fields.hasErrors('username')} ? 'has-danger'">
-            <label class="form-control-label" for="inputUsername">Username</label>
-            <input type="text" class="form-control form-control-danger" id="inputUsername" th:field="*{username}"/>
-            <div class="form-control-feedback" th:each="error : ${#fields.errors('username')}" th:text="${error}">Sorry,
-                that username's taken. Try another?
-            </div>
-        </div>
-        <div class="form-group" th:classappend="${#fields.hasErrors('password')}? 'has-danger'">
-            <label class="form-control-label" for="inputPassword">Password</label>
-            <input type="password" class="form-control form-control-danger" id="inputPassword" th:field="*{password}"/>
-            <div class="form-control-feedback" th:each="error : ${#fields.errors('password')}" th:text="${error}">Sorry,
-                that password is incorrect?
-            </div>
-        </div>
-        <div class="form-group" th:classappend="${#fields.hasErrors('global')} ? 'has-danger'">
-            <label class="form-control-label" for="inputConfirmPassword">Confirm Password</label>
-            <input type="password" class="form-control form-control-danger" id="inputConfirmPassword"
-                   th:field="*{confirmPassword}"/>
-            <div class="form-control-feedback" th:each="error : ${#fields.errors('global')}" th:text="${error}">Sorry,
-                passwords are not matching?
-            </div>
-        </div>
-        <input type="submit" class="btn btn-success" value="Register"/>
-    </form>
-</div>
-
--->
-<script th:src="@{jquery/jquery.min.js}"></script>
-<script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
-</body></html>
