--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,6 +6,22 @@ body {
     background-color:rgba(0, 0, 0, 0.7);
 }
 
+/*
+body>footer {
+    background-color:rgba(0, 0, 0, 0.7);
+    padding: 5px;
+    margin: 10px 0;
+    text-align: center;
+    clear: both;
+    color:white;
+}
+*/
+
+body>footer {
+
+    color:white;
+}
+
 h1 {
     color: #78ab46;
 }
