--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_fullname">Full Name</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" type="text" id="user_fullname" placeholder="Full Name" name="fullName"/>
+                            <input class="form-control" type="text" id="user_fullname" placeholder="fullname" name="fullname" required="required"/>
                         </div>
                     </div>
                     <div class="form-group">
