--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -22,6 +22,21 @@ body>footer {
     color:white;
 }
 
+div.well {
+    background-color:rgba(0, 0, 0, 0.5);
+    color:white;
+    border:none;
+}
+
+fieldset>legend {
+    color:white;
+}
+
+input[class="form-control"] {
+    background-color:rgba(0, 0, 0, 0.7);
+    color:white;
+}
+
 h1 {
     color: #78ab46;
 }
