--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="fragments/head" th:with="pageTitle='betting4life'"></head>
+<head th:include="fragments/head" th:with="pageTitle='Team Venom'"></head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
