Add Prediction model, add db relations

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,10 +8,10 @@
                 <a th:href="@{/}">Home</a>
             </li>
             <li>
-                <a th:href="@{/}">Bets</a>
+                <a th:href="@{/}">Betting Events</a>
             </li>
             <li sec:authorize="isAuthenticated()">
-                <a th:href="@{/}">Make Bet</a>
+                <a th:href="@{/}">Add Betting Event</a>
             </li>
             <li>
                 <a th:href="@{/}">Predictions</a>
