--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -32,7 +32,7 @@ fieldset>legend {
     color:white;
 }
 
-input[class="form-control"] {
+input[class="form-control"], .form-control {
     background-color:rgba(0, 0, 0, 0.7);
     color:white;
 }
