Add make prediction option finished, merging with master

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
                 <a th:href="@{/}">Predictions</a>
             </li>
             <li sec:authorize="isAuthenticated()">
-                <a th:href="@{/}">Make Prediction</a>
+                <a th:href="@{/prediction/make}">Make Prediction</a>
             </li>
             <li>
                 <a th:href="@{/}">Users</a>
