--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,31 +1,40 @@
 <main>
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" th:action="@{/register}" method="post">
+            <form class="form-horizontal" th:action="@{/register}" th:object="${userBindingModel}" method="post">
                 <fieldset>
                     <legend>Register</legend>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_username">Username</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" type="text" id="user_username" placeholder="username" name="username" required="required"/>
+                            <input class="form-control" type="text" id="user_username" placeholder="Username" name="username" required="required"/>
+                            <div class="form-control-feedback" th:each="error : ${#fields.errors('username')}" th:text="${error}">Sorry,
+                                that username's taken. Try another?
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_fullname">Full Name</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" type="text" id="user_fullname" placeholder="fullname" name="fullname" required="required"/>
+                            <input class="form-control" type="text" id="user_fullname" placeholder="Full Name" name="fullname" required="required"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_password_first">Password</label>
                         <div class="col-sm-4">
                             <input type="password" class="form-control" id="user_password_first" placeholder="Password" name="password" required="required"/>
+                            <div class="form-control-feedback" th:each="error : ${#fields.errors('password')}" th:text="${error}">Sorry,
+                                that password is incorrect?
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_password_second">Confirm Password</label>
                         <div class="col-sm-4">
-                            <input type="password" class="form-control" id="user_password_second" placeholder="Password" name="confirmPassword" required="required"/>
+                            <input type="password" class="form-control" id="user_password_second" placeholder="Confirm Password" name="confirmPassword" required="required"/>
+                            <div class="form-control-feedback" th:each="error : ${#fields.errors('global')}" th:text="${error}">Sorry,
+                                passwords are not matching?
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
