--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,7 +40,7 @@
 
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" th:href="@{/profile}">Account Info</a></li>
-                    <li><a class="dropdown-item" th:href="@{/}">My Predictions</a></li>
+                    <li><a class="dropdown-item" th:href="@{/user/predictions}">My Predictions</a></li>
                 </ul>
             </li>
             <li sec:authorize="isAuthenticated()">
