--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -9,7 +9,7 @@
 -->
 <div class="index-page-wrapper">
     <div class="col-sm-4">
-        <h2>Latest Events</h2>
+        <h2>Events</h2>
         <!--<h4><small>RECENT BETS</small></h4>-->
         <div class="well">
             <p>Some text..</p>
