--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -112,6 +112,14 @@ div[class="card text-center"] {
     background-color:rgba(0, 0, 0, 0.5);
 }
 
+.index-page-wrapper > .col-sm-4 > .well:hover {
+    background-color:rgba(0, 0, 0, 0.7);
+    font-weight: bold;
+}
+
+/* index page latest info style*/
+
+
 .error-message {
     color: #a94442;
 }
