--- a/src/main/resources/templates/user/predictions.html
+++ b/src/main/resources/templates/user/predictions.html
@@ -9,7 +9,7 @@
     <div class="row single-rows" th:each="prediction : ${userPredictions}">
         <div class="col-sm-3"  th:text="${prediction.getBet().getDescription()}">Event</div>
         <div class="col-sm-6" th:text="${prediction.getContent()}">Prediction content</div>
-        <div class="col-sm-3" th:text="${prediction.getDate() + ' ' + prediction.getTime()}">Date</div>
+        <div class="col-sm-3" th:text="${#dates.format(prediction.getDate(), 'dd-MMM-yyyy HH:mm')}">Date</div>
     </div>
 </div>
 </main>
