--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,21 +1,12 @@
-<!--
-<div class="col-sm-8 text-left" style="border:1px solid red;color:white">
-    <h1>Welcome</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <hr>
-    <h3>Test</h3>
-    <p>Lorem ipsum...</p>
-</div>
--->
 <div class="index-page-wrapper">
     <div class="col-sm-4">
-        <h2>Latest Betting Events</h2>
+        <h1>Latest Betting Events</h1>
         <div class="well latest-content-info" th:each="bet : ${bets}">
             <h3  th:text="${bet.getDescription()}">Bet Description</h3>
         </div>
     </div>
     <div class="col-sm-4">
-        <h2>Latest Predictions</h2>
+        <h1>Latest Predictions</h1>
         <div class="well latest-content-info" th:each="prediction : ${predictions}">
             <h3  th:text="${prediction.getContent()}">Prediction content</h3>
             <div>
@@ -34,69 +25,10 @@
         </div>
     </div>
     <div class="col-sm-4">
-        <h2>Top Users</h2>
-        <div class="well latest-content-info" th:each="bet : ${bets}">
-            <h3  th:text="${bet.getDescription()}">Bet Description</h3>
+        <h1>Top 3 Users</h1>
+        <div class="well latest-content-info" th:each="user : ${users}">
+            <h3  th:text="${user.getUsername()}">Username</h3>
+            <p th:text="${'Predictions: ' + user.getPredictions().size()}">Number of predictions</p>
         </div>
     </div>
 </div>
-<!--
-<div class="col-sm-9">
-    <h4><small>RECENT POSTS</small></h4>
-    <hr>
-    <h2>I Love Food</h2>
-    <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
-    <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
-    <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <br><br>
-
-    <h4><small>RECENT POSTS</small></h4>
-    <hr>
-    <h2>Officially Blogging</h2>
-    <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
-    <h5><span class="label label-success">Lorem</span></h5><br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <hr>
-
-    <h4>Leave a Comment:</h4>
-    <form role="form">
-        <div class="form-group">
-            <textarea class="form-control" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-    </form>
-    <br><br>
-
-    <p><span class="badge">2</span> Comments:</p><br>
-
-    <div class="row">
-        <div class="col-sm-2 text-center">
-            <img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-        </div>
-        <div class="col-sm-10">
-            <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
-            <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <br>
-        </div>
-        <div class="col-sm-2 text-center">
-            <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-        </div>
-        <div class="col-sm-10">
-            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
-            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <br>
-            <p><span class="badge">1</span> Comment:</p><br>
-            <div class="row">
-                <div class="col-sm-2 text-center">
-                    <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-                </div>
-                <div class="col-xs-10">
-                    <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
-                    <p>Me too! WOW!</p>
-                    <br>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
--->
