--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@
                 <a th:href="@{/prediction/make}">Make Prediction</a>
             </li>
             <li>
-                <a th:href="@{/}">Users</a>
+                <a th:href="@{/users}">Users</a>
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
